# distro

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGES  CHANGES.txt  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  circle.yml  codecov.yml  dev-requirements.txt  dist.py  distro.py  ld.py  pyproject.toml  query_local_distro.py  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  stale.yml
.github/workflows/: ci.yaml  coverage.yaml  deploy.yml
distro/: __init__.py  __main__.py  _distribution.py  _linux.py  _mac_os.py  _windows.py
docs/: compatibility.rst  conf.py  index.rst
ld/: __init__.py  constants.py
ld/tests/: __init__.py  test_ld.py
ld/tests/resources/: centos-release  centos5-release  fedora-os-release  fedora-release  lsb-release  lsb_release  oracle-release  redhat-release  redhat6-release  slackware-version  ubuntu-os-release
src/distro/: distro.py
tests/: test_cli.py  test_dist.py  test_distro.py  test_general.py  test_ld.py  test_linux_distro.py  test_macos_distro.py  test_windows_distro.py
tests/resources/distros/almalinux10/etc/: almalinux-release-upstream  system-release-cpe
tests/resources/distros/almalinux10/usr/lib/: os-release
tests/resources/distros/alpine/etc/: os-release
tests/resources/distros/altlinux10/etc/: redhat-release
tests/resources/distros/amazon2023/etc/: os-release
tests/resources/distros/armbian/etc/: armbian-release
tests/resources/distros/centosstream9/etc/: os-release
tests/resources/distros/cloudlinuxvm9/proc/: modules
tests/resources/distros/debian13/etc/: os-release
tests/resources/distros/debian9/etc/: os-release
tests/resources/distros/fedora42/etc/: fedora-release
tests/resources/distros/fedora42/usr/lib/: os-release
tests/resources/distros/kvmibm1/etc/: redhat-release
tests/resources/distros/mageia5/etc/: release
tests/resources/distros/mandriva2011/etc/: release
tests/resources/distros/openmandrivalx3/etc/: lsb-release  openmandriva-release  os-release  release  version
tests/resources/distros/rhel10/etc/: os-release
tests/resources/distros/rhel9/etc/: os-release
tests/resources/distros/rocky9/etc/: rocky-release-upstream  system-release-cpe
tests/resources/distros/rocky9/usr/lib/: os-release  rocky-release
tests/resources/distros/ubuntu24/etc/: lsb-release  os-release
tests/resources/distros/ubuntu2504/etc/: os-release
tests/resources/special/: lsb_release.ubuntu14.nomodules.out  lsb_release.ubuntu14.out  lsb_release.ubuntu14.trailingblanks.out
tests/resources/special/debian_no_codename/etc/: os-release
tests/resources/testdistros/distro/absolute_symlinks/tmp/: another-link
tests/resources/testdistros/distro/root_dir_absolute_symlinks/etc/: os-release
tests/resources/testdistros/distro/root_dir_escape/etc/: os-release
(+10 files in other folders)
