[metadata]
name = distro
version = attr: distro.__version__
url = https://github.com/python-distro/distro
author = Nir Cohen
author_email = nir36g@gmail.com
license = Apache License, Version 2.0
platforms = All
description= Distro - an OS platform information API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Operating System

[options]
package_dir =
    = src
packages = distro
python_requires = >=3.7

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    distro = distro.distro:main

[flake8]
max-line-length = 88

[isort]
profile = black
